Fix: remove extra margin on last list item in Explore page styles

--- a/src/styles/pages/explore.scss
+++ b/src/styles/pages/explore.scss
@@ -178,6 +178,9 @@
 
         li {
           margin-bottom: 16px;
+          &:last-of-type {
+            margin-bottom: 0;
+          }
         }
 
         .icon {
